--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.1.2
   firebase_core: ^4.2.1
+  flutter_svg: ^2.2.3
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
